[package]
name = "hashdeep"
version = "0.2.1"
authors = ["René Mayrhofer <rm@ins.jku.at>"]
#about = "Recursively compute file hashes over a tree"

[dependencies]
walkdir = "^2"
#rust-crypto = "^0.2"
blake3 = "^1.3"
filebuffer = "^0.4"
clap = { version = "^4", default-features = false, features = ["std", "help", "cargo", "derive"] }

# optimize for binary size, see e.g. https://arusahni.net/blog/2020/03/optimizing-rust-binary-size.html
[profile.release]
#strip = "debuginfo"
# be even more aggressive with stripping to optimize for binary size by default in release binary
strip = true
opt-level = "z"
lto = true
codegen-units = 1
