[package]
name = "hashdeep"
version = "0.2.2"
authors = ["René Mayrhofer <rm@ins.jku.at>"]
#about = "Recursively compute file hashes over a tree"

[features]
default = ["blake3", "sha2", "sha3"]
blake3 = ["dep:blake3"]
sha2 = ["dep:sha2"]
sha3 = ["dep:sha3"]

[dependencies]
walkdir = "^2"
digest = "^0.10"
sha2 = { version = "^0.10", optional = true }
sha3 = { version = "^0.10", optional = true }
blake3 = { version = "^1.5", features = ["traits-preview"], optional = true }
filebuffer = "^0.4"
clap = { version = "^4", default-features = false, features = ["std", "help", "cargo", "derive"] }

# optimize for binary size, see e.g. https://arusahni.net/blog/2020/03/optimizing-rust-binary-size.html
[profile.release]
#strip = "debuginfo"
# be even more aggressive with stripping to optimize for binary size by default in release binary
strip = true
opt-level = "z"
lto = true
codegen-units = 1
